# FinanceTools

./: .gitignore  README.md  pyproject.toml
apps/backtester/: regime.py  run.py  stress_test.py
apps/dashboard/: app.py
apps/intraday_trader/: app.py  web_app.py
apps/portfolio_trader/: app.py  backtest.py
finance_tools/: __init__.py
finance_tools/backtest/: __init__.py  engine.py  intraday.py  monte_carlo.py  portfolio.py
finance_tools/broker/: __init__.py  alpaca.py  data_feed.py
finance_tools/data/: __init__.py  market.py  results.py  universe.py  view_results.py
finance_tools/strategies/: __init__.py  equal_weight.py  intraday.py  portfolio.py
finance_tools/utils/: __init__.py  plotting.py
tests/: conftest.py  test_backtest.py  test_data.py  test_intraday_trader.py  test_portfolio_trader.py  test_regime.py
